Indication enfants ok dans le programme du samedi

--- a/programme/programmes.css
+++ b/programme/programmes.css
@@ -176,7 +176,7 @@ i {
 	max-width:100% !important;
 }
 
-.limite-participants {
+.limite-participants-enfants {
 	display:flex;
 	justify-content: center;
 }
